Fix issue with section top spacing
Closes #3

--- a/src/assets/sass/modules/home.sass
+++ b/src/assets/sass/modules/home.sass
@@ -9,7 +9,8 @@
 /* HOME
 
 .home
-  margin: 250px 0 130px
+  margin: 150px 0 130px
+  padding-top: 100px
 
 .home__container
   display: flex
